--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -11,49 +11,54 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-        <LinearLayout
+        <HorizontalScrollView
+                android:id="@+id/scrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/linearLayout"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:fillViewport="true"
+                android:scrollbars="horizontal">
 
-            <Button
-                    android:id="@+id/popular_movies_button"
-                    android:layout_width="0dp"
+            <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/popular_button"
-                    style="?android:attr/buttonBarButtonStyle" />
+                    android:orientation="horizontal">
 
-            <Button
-                    android:id="@+id/top_movies_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/top_button"
-                    style="?android:attr/buttonBarButtonStyle" />
+                <Button
+                        android:id="@+id/popular_movies_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/popular_button"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_marginEnd="@dimen/edit_text_margin"/>
 
-            <Button
-                    android:id="@+id/now_movies_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/now_button"
-                    style="?android:attr/buttonBarButtonStyle" />
+                <Button
+                        android:id="@+id/top_movies_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/top_button"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_marginEnd="@dimen/edit_text_margin"/>
 
-            <Button
-                    android:id="@+id/up_movies_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/up_button"
-                    style="?android:attr/buttonBarButtonStyle" />
+                <Button
+                        android:id="@+id/now_movies_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/now_button"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_marginEnd="@dimen/edit_text_margin"/>
 
-        </LinearLayout>
+                <Button
+                        android:id="@+id/up_movies_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/up_button"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_marginEnd="@dimen/edit_text_margin"/>
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -62,7 +67,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
