--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,19 +5,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/creator_image"
+    <TextView
+            android:layout_marginTop="@dimen/edit_text_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@mipmap/creator_pic_foreground"
-            android:paddingTop="@dimen/login_edit_text_margin"
-            android:paddingBottom="@dimen/login_edit_text_margin"
-            android:contentDescription="@string/createor_image_disc" />
+            android:text="@string/the_app_was_made_possible_with_the_help_of"/>
+
+    <LinearLayout
+            android:layout_marginTop="@dimen/edit_text_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tmdb"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/edit_text_margin"
+                android:layout_marginEnd="@dimen/edit_text_margin"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/tmdb"/>
+
 
     </LinearLayout>
 
@@ -25,7 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginBottom="@dimen/about_margin"/>
+        android:layout_marginBottom="@dimen/about_margin"
+            android:layout_marginTop="@dimen/edit_text_margin"/>
 
     <ScrollView
         android:layout_width="wrap_content"
