--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        android:id="@+id/movie_container"
+        android:id="@+id/game_container"
         android:layout_marginTop="@dimen/edit_text_margin"
         android:layout_marginBottom="@dimen/edit_text_margin">
-
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -20,19 +19,19 @@
                 android:orientation="vertical">
 
             <TextView
-                    android:id="@+id/movie_text_view"
+                    android:id="@+id/game_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:text="@string/home_text"
                     android:gravity="center"
                     android:elevation="2dp"
-                    android:textSize="30sp" />
+                    android:textSize="30sp"/>
 
             <ImageView
-                    android:id="@+id/movie_image"
+                    android:id="@+id/game_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/my_logo_background" />
+                    android:src="@drawable/my_logo_background"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -44,25 +43,22 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/ratting"
                         android:layout_gravity="center"
-                        android:gravity="center" />
+                        android:gravity="center"/>
 
                 <TextView
-                        android:id="@+id/movie_ratting"
+                        android:id="@+id/game_ratting"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         app:drawableStartCompat="@drawable/ratting_ic"
                         android:text="@string/home_text"
-                        android:gravity="center_vertical" />
+                        android:gravity="center_vertical"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
-
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
