--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -40,8 +40,8 @@
 
                 <item
                         android:id="@+id/nav_games"
-                        android:icon="@drawable/games_ic"
-                        android:title="@string/games_nav"/>
+                        android:icon="@drawable/tv_ic"
+                        android:title="@string/tv_show_nav"/>
 
                 <item
                         android:id="@+id/nav_about"
