--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -70,8 +70,8 @@
 
     <fragment
             android:id="@+id/nav_games"
-            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.games.GamesFragment"
-            android:label="@string/games_nav"
-            tools:layout="@layout/fragment_games" />
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.tv_shows.TvShowsFragment"
+            android:label="@string/tv_show_nav"
+            tools:layout="@layout/fragment_tv_shows" />
 
 </navigation>
