--- a/app/src/main/res/layout/tv_show_item.xml
+++ b/app/src/main/res/layout/tv_show_item.xml
@@ -4,7 +4,7 @@
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        android:id="@+id/game_container"
+        android:id="@+id/tv_container"
         android:layout_marginTop="@dimen/edit_text_margin"
         android:layout_marginBottom="@dimen/edit_text_margin">
 
@@ -19,7 +19,7 @@
                 android:orientation="vertical">
 
             <TextView
-                    android:id="@+id/game_text_view"
+                    android:id="@+id/tv_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:text="@string/home_text"
@@ -28,7 +28,7 @@
                     android:textSize="30sp"/>
 
             <ImageView
-                    android:id="@+id/game_image"
+                    android:id="@+id/tv_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/my_logo_background"/>
@@ -47,7 +47,7 @@
                         android:gravity="center"/>
 
                 <TextView
-                        android:id="@+id/game_ratting"
+                        android:id="@+id/tv_ratting"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
