--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,7 +39,7 @@
                         android:title="@string/movies_nav"/>
 
                 <item
-                        android:id="@+id/nav_games"
+                        android:id="@+id/nav_tv"
                         android:icon="@drawable/tv_ic"
                         android:title="@string/tv_show_nav"/>
 
