--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -69,9 +69,24 @@
     </fragment>
 
     <fragment
-            android:id="@+id/nav_games"
+            android:id="@+id/nav_tv"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.tv_shows.TvShowsFragment"
             android:label="@string/tv_show_nav"
-            tools:layout="@layout/fragment_tv_shows" />
+            tools:layout="@layout/fragment_tv_shows">
+        <action
+                android:id="@+id/action_nav_tv_to_nav_single_tv"
+                app:destination="@id/nav_single_tv" />
+    </fragment>
+
+    <fragment
+            android:id="@+id/nav_single_tv"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.tv_shows.SingleTvFragment"
+            android:label="@string/tv_show_nav_s"
+            tools:layout="@layout/fragment_single_tv_show">
+        <argument
+                android:name="tv_show_id"
+                app:argType="string"
+                android:defaultValue="default" />
+    </fragment>
 
 </navigation>
