--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NewApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme_night" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red_orange_1</item>
         <item name="colorPrimaryVariant">@color/dark_gray</item>
