--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,7 +2,7 @@
 <androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
-            app:key="@string/theme_key"
-            app:title="@string/theme_title"/>
+            app:key="@string/dark_theme_key"
+            app:title="@string/theme_title_settings"/>
 
 </androidx.preference.PreferenceScreen>
